<resources>
    <string name="APNS_1">%1$s sent you a message</string>
    <string name="APNS_A">%1$s sent you a music track: %2$s</string>
    <string name="APNS_AL">%1$s wants to know where you are.</string>
    <string name="APNS_AP">%1$s wants you to reply with a photo</string>
    <string name="APNS_CS">%1$s sent a sticker</string>
    <string name="APNS_D">%1$s: %2$s</string>
    <string name="APNS_F">%1$s sent a file</string>
    <string name="APNS_FRD">"%1$s replied to the article '%2$s'"</string>
    <string name="APNS_L">%1$s shared a location %2$s</string>
    <string name="APNS_LP1">%1$s likes your photo</string>
    <string name="APNS_LP2">"%1$s likes %2$s's photo"</string>
    <string name="APNS_MC">Missed call from %1$s</string>
    <string name="APNS_N">%1$s sent you a drawing</string>
    <string name="APNS_OA">%1$s: %2$s</string>
    <string name="APNS_P">%1$s sent you a photo</string>
    <string name="APNS_PC">%1$s: %2$s</string>
    <string name="APNS_R">%1$s sent you a voice message</string>
    <string name="APNS_S">%1$s sent you a sticker</string>
    <string name="APNS_SP">%1$s sent you a flash</string>
    <string name="APNS_SR">%1$s sent you a secret something</string>
    <string name="APNS_ST">%1$s sent you a whisper</string>
    <string name="APNS_TD">%1$s called you</string>
    <string name="APNS_V">%1$s sent you a video</string>
    <string name="APNS_X">You have one new message</string>
    <string name="APNS_Y">%1$s shared a YouTube video: %2$s</string>
    <string name="CHANNEL_UNSUBSCRIBED">"You're unsubscribed from %1$s"</string>
    <string name="I18NTestKey1">I18N Test Key 1</string>
    <string name="I18NTestKey2">I18N Test Key 2:%1$s</string>
    <string name="I18NTestKey3">I18N Test Key 3:%2$s, %1$s</string>
    <string name="INVITE_ACCEPTED">%1$s is now your friend</string>
    <string name="NEW_INVITE">%1$s send you a friend request</string>
    <string name="a_sound_name">Cubie main</string>
    <string name="about_chat_group">About this Group</string>
    <string name="about_chat_room">About this chat room</string>
    <string name="about_forum_board">About</string>
    <string name="about_new_friend">About %1$s</string>
    <string name="about_title">About Cubie</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with <g example="Bluetooth" id="application_name">%s</g></string>
    <string name="accept">Accept</string>
    <string name="accept_friend_request">Accept friend request?</string>
    <string name="account_already_blocked">The user is blocked</string>
    <string name="account_duplicate">This phone number is already registered in Cubie.</string>
    <string name="account_not_exist">"The user isn't a friend anymore"</string>
    <string name="account_setting_id_label">Cubie ID</string>
    <string name="account_setting_title">Profile Settings</string>
    <string name="action_item_overflow">Other</string>
    <string name="action_item_search">Search</string>
    <string name="activate_sub_account">Set up</string>
    <string name="activate_sub_account_desc">You need to set up a desktop account to use Cubie Lite</string>
    <string name="add_all_friends">Add all s friends</string>
    <string name="add_member">Add Members</string>
    <string name="auto_sync_contact_title">Import Contacts List</string>
    <string name="backup_title">Backup</string>
    <string name="block_list_title">Blocked list</string>
    <string name="bug_report_setting_title">Report a problem</string>
    <string name="camera_settings_title">Camera Settings</string>
    <string name="change_profile_cover">Change Cover</string>
    <string name="change_profile_icon">Change Photo</string>
    <string name="chat_group_media_history_title">Media Library</string>
    <string name="chat_setting_title">Chat Room Settings</string>
    <string name="chatgroup_setting_title">Chat Room Settings</string>
    <string name="clear_chat_history">Clear Messages</string>
    <string name="cubie_head_always_on_summary">Keep Cubie Tab on my home screen when leaving Cubie</string>
    <string name="cubie_head_always_on_title">Keep Cubie Tab on</string>
    <string name="cubie_head_enable_summary">The Cubie Tab lets you reply to messages directly from your home screen</string>
    <string name="cubie_head_enable_title">Turn on Cubie Tab</string>
    <string name="cubie_mini_setting_title">Cubie Lite (Desktop)</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="delete_and_leave_group">Exit Group</string>
    <string name="delete_forum_article">Remove Post</string>
    <string name="detect_external_image_settting_summary">Prompt me to share photos through Cubie when I use other photo applications</string>
    <string name="detect_external_image_settting_title">Smart sharing</string>
    <string name="diagnosis_title">Diagnosis</string>
    <string name="edit_forum_board_title">Edit Board</string>
    <string name="email_setting_title">Email Setup</string>
    <string name="enable_notification_summary">Show notifications when receiving messages</string>
    <string name="enable_notification_title">Notification</string>
    <string name="enable_vibration_summary">Vibrate when receiving messages</string>
    <string name="enable_vibration_title">Vibration</string>
    <string name="exclude_in_recommend_friends_summary">"Don't recommend me to anyone. I don't need Cubie to suggest any friends to me."</string>
    <string name="exclude_in_recommend_friends_title">Incognito mode</string>
    <string name="export_message">Export History</string>
    <string name="facebook_logout_action_item">Logout of Facebook</string>
    <string name="facebook_page_setting_title">Like Cubie on Facebook</string>
    <string name="faq_setting_title">Cubie FAQ</string>
    <string name="favorite_board_title">Add to Favorites</string>
    <string name="feature_request_setting_title">Leave a suggestion</string>
    <string name="feedback_setting_summary">Report a problem or leave a suggestion</string>
    <string name="feedback_setting_title">Feedback</string>
    <string name="font_size_setting_title">Font size</string>
    <string name="forum_reply_notification_summary">Notify me when I received article reply</string>
    <string name="forum_reply_notification_title">Cubie Space notifications</string>
    <string name="forward">Forward to other Group</string>
    <string name="google_play_rating_setting_summary">Visit Google Play to rate us and leave a review!</string>
    <string name="google_play_rating_setting_title">Rate us on Google Play</string>
    <string name="help_title">Support and About</string>
    <string name="hide_contact_list_title">"Hide 'Invite Friends'"</string>
    <string name="hide_recommend_friend_list_title">"Hide 'People You May Know'"</string>
    <string name="like_cubie_facebook_fan_page">Like Cubie on Facebook</string>
    <string name="modify_chat_group_icon">Change Group Picture</string>
    <string name="modify_chat_group_name">Change Subject</string>
    <string name="modify_chat_group_wallpaper">Change wallpaper</string>
    <string name="modify_nickname">Change Name</string>
    <string name="mute_chat_group">Mute</string>
    <string name="nickname_placeholder">Your name…</string>
    <string name="notification_setting_category">Notification Settings</string>
    <string name="notification_time_end_title">End</string>
    <string name="notification_time_setting_summary">Turn on/off notification by time</string>
    <string name="notification_time_setting_title">Notification time</string>
    <string name="notification_time_start_title">Start</string>
    <string name="notify_new_arrival_at_bottom_summary">"If I've already scrolled to the bottom of the chatroom, don't notify me when new messages are sent."</string>
    <string name="notify_new_arrival_at_bottom_title">Smart notification</string>
    <string name="ok">OK</string>
    <string name="passcode_lock_description">Once you forget your passcode, you will need to delete and reinstall Cubie.</string>
    <string name="passcode_lock_title">Passcode lock</string>
    <string name="popup_delete_message_and_file">Delete message and photo</string>
    <string name="popup_edit_photo">Add photo effects</string>
    <string name="popup_paste_to_board">Paste to drawing board</string>
    <string name="popup_share_to_facebook">Share to Facebook</string>
    <string name="press_enter_to_send_title">Press ENTER to send</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_setting_title">Privacy</string>
    <string name="public_profile_summary">Allow friend invitation on Cubie Space</string>
    <string name="public_profile_title">Turn on friend invitation on Cubie Space</string>
    <string name="rating_setting_summary">Rate us on Google Play or follow us on Facebook and Twitter to get the latest news!</string>
    <string name="rating_setting_title">I love Cubie!</string>
    <string name="recent_picture_group_setting_summary">Display recent photos on the chat room menu</string>
    <string name="recent_picture_group_setting_title">Show chat room photos</string>
    <string name="remove_media_files_summary">Older media files will be deleted automatically to save phone memory</string>
    <string name="remove_media_files_title">Delete old media files automatically</string>
    <string name="remove_member">Remove member</string>
    <string name="report_forum_artitle_title">Report this Post</string>
    <string name="report_forum_board_title">Report this Board</string>
    <string name="rotate_chat_room_title">Auto-rotate</string>
    <string name="select_my_account_icon_message">Choose a suitable photo so friends can find you easily</string>
    <string name="select_ring_tone_summary">Select a ringtone</string>
    <string name="select_ring_tone_title">Ringtone</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="show_notification_content_summary">Display message content in notifications</string>
    <string name="show_notification_content_title">Show message content in notification</string>
    <string name="skip">Skip</string>
    <string name="space_terms_of_service">Cubie Space TOS</string>
    <string name="sticker_edit">My Stickers</string>
    <string name="sticker_setting_and_download">Sticker Store</string>
    <string name="sub_account_setting_title">Set up and Install</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="twitter_following_setting_title">Follow Cubie on Twitter</string>
    <string name="version_title">Version</string>
    <string name="voice_msg_setting_title">Voice message settings</string>
    <string name="wallpaper_setting_title">Wallpapers</string>
</resources>