<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/enable_notification_title" android:key="ENABLE_ALL_NOTIFICATION" android:summary="@string/enable_notification_summary" android:defaultValue="true" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/select_ring_tone_title" android:key="ENABLE_RINGTONE_NOTIFICATION" android:dependency="ENABLE_ALL_NOTIFICATION" android:defaultValue="true" />
    <RingtonePreference android:layout="?android:preferenceLayoutChild" android:title="@string/select_ring_tone_summary" android:key="NOTIFY_RING_TONE" android:dependency="ENABLE_RINGTONE_NOTIFICATION" android:ringtoneType="notification" android:showDefault="true" android:showSilent="true" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/enable_vibration_title" android:key="NOTIFY_VIBRATION_KEY" android:summary="@string/enable_vibration_summary" android:dependency="ENABLE_ALL_NOTIFICATION" android:defaultValue="true" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/show_notification_content_title" android:key="show_notification_content" android:summary="@string/show_notification_content_summary" android:dependency="ENABLE_ALL_NOTIFICATION" android:defaultValue="false" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/cubie_head_enable_title" android:key="enable_cubie_head" android:summary="@string/cubie_head_enable_summary" android:dependency="ENABLE_ALL_NOTIFICATION" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/cubie_head_always_on_title" android:key="cubie_head_always_on" android:summary="@string/cubie_head_always_on_summary" android:dependency="enable_cubie_head" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/notify_new_arrival_at_bottom_title" android:key="notify_new_arrival_at_bottom" android:summary="@string/notify_new_arrival_at_bottom_summary" android:dependency="ENABLE_ALL_NOTIFICATION" android:defaultValue="false" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/detect_external_image_settting_title" android:key="detect_external_image" android:summary="@string/detect_external_image_settting_summary" android:dependency="ENABLE_ALL_NOTIFICATION" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/forum_reply_notification_title" android:key="forum_reply_notification" android:summary="@string/forum_reply_notification_summary" android:dependency="ENABLE_ALL_NOTIFICATION" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/notification_time_setting_title" android:key="notification_time" android:summary="@string/notification_time_setting_summary" android:dependency="ENABLE_ALL_NOTIFICATION" />
    <PreferenceScreen android:layout="?android:preferenceLayoutChild" android:title="@string/notification_time_start_title" android:key="notification_time_start" android:dependency="notification_time" />
    <PreferenceScreen android:layout="?android:preferenceLayoutChild" android:title="@string/notification_time_end_title" android:key="notification_time_end" android:dependency="notification_time" />
</PreferenceScreen>