<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/public_profile_title" android:key="space_public_profile" android:summary="@string/public_profile_summary" android:defaultValue="false" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/exclude_in_recommend_friends_title" android:key="exclude_in_recommend_friends" android:summary="@string/exclude_in_recommend_friends_summary" android:defaultValue="false" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/hide_recommend_friend_list_title" android:key="hide_recommend_friend_list" android:defaultValue="false" />
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/hide_contact_list_title" android:key="hide_contact_list" android:defaultValue="false" />
    <PreferenceScreen android:title="@string/block_list_title">
        <intent android:targetPackage="com.liquable.nemo" android:targetClass="com.liquable.nemo.setting.BlockListActivity" />
    </PreferenceScreen>
    <com.liquable.nemo.setting.MultilineTitleCheckBoxPreference android:title="@string/passcode_lock_title" android:key="passcode_lock_preference" android:summary="@string/passcode_lock_description" android:defaultValue="false" />
</PreferenceScreen>