<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/shareItem" android:title="@string/share" android:showAsAction="always" android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider" />
    <item android:icon="@drawable/action_icon_paint" android:id="@id/pasteToBoardItem" android:title="@string/popup_paste_to_board" android:showAsAction="always" />
    <item android:icon="@drawable/action_icon_edit" android:id="@id/editPhotoItem" android:title="@string/popup_edit_photo" android:showAsAction="always" />
    <item android:icon="@drawable/action_icon_history" android:id="@id/historyItem" android:title="@string/chat_group_media_history_title" android:showAsAction="always" />
    <item android:icon="@drawable/action_icon_overflow" android:id="@id/overflowMenuItem" android:title="@string/action_item_overflow" android:showAsAction="always">
        <menu>
            <item android:id="@id/forwardItem" android:title="@string/forward" android:showAsAction="never" />
            <item android:id="@id/shareToFaceBookItem" android:title="@string/popup_share_to_facebook" android:showAsAction="never" />
            <item android:id="@id/deleteMessageAndFile" android:title="@string/popup_delete_message_and_file" android:showAsAction="never" />
        </menu>
    </item>
</menu>