<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/bg_flowers" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="@drawable/bg_form" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/accountIconImageView" android:layout_width="120.0dip" android:layout_height="120.0dip" android:src="@drawable/avatar_dummy" android:scaleType="fitXY" />
            <Button android:textSize="16.0sp" android:layout_gravity="center_horizontal" android:id="@id/chooseFromGalleryBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/change_profile_icon" />
            <TextView android:textColor="#ff000000" android:layout_gravity="center_horizontal" android:id="@id/selectAccountIconTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/select_my_account_icon_message" />
            <EditText android:textSize="18.0sp" android:layout_gravity="center_horizontal" android:id="@id/nicknameEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:hint="@string/nickname_placeholder" android:singleLine="true" android:maxLength="20" android:imeOptions="actionDone" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textSize="16.0sp" android:id="@id/skipBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/skip" android:layout_weight="1.0" style="@style/NemoNegativeButton" />
                <Button android:textSize="16.0sp" android:id="@id/okBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="2.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>